--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ report.html
 # Remove old stuff
 Algal_BP_Models
 fba_csorokiniana
+external
 # GitHub Large Files
 data/genome/reference
 data/genome/target
